fix deprecated styles; lose whitespace color; update notes snippet

--- a/atom/styles.less
+++ b/atom/styles.less
@@ -21,14 +21,15 @@
 }
 
 // style the background and foreground colors on the atom-text-editor-element itself
-atom-text-editor {
-  // color: white;
-  // background-color: hsl(180, 24%, 12%);
-}
-atom-text-editor::shadow {
+// atom-text-editor {
+//   // color: white;
+//   // background-color: hsl(180, 24%, 12%);
+// }
+
+aatom-text-editor.editor {
   .leading-whitespace, .invisible-character {
     color: #00ff8c;
-    opacity: 0.5;
+    opacity: 0.3;
   }
 }
 // style UI elements inside atom-text-editor
